# wallet_fast_api

./: alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: validations.py  views.py
app/api/routers/: auth.py  main_router.py  user.py  wallet.py
app/api/v1/routers/: auth.py  user.py
app/authentication/: backend.py  models.py  strategy.py  transport.py  user_manager.py  user_permissions.py
app/core/: __init__.py  celery.py  config.py
app/core/database/: __init__.py  base.py  db_helper.py  mixins.py
app/user/: models.py  schemas.py
app/wallet/: controllers.py  models.py  schemas.py  tasks.py
migrations/: env.py
migrations/versions/: 02d0870f3ab2_create_wallet.py  create_access_token_17.12.2024_18:14.py  create_user_17.12.2024_18:13.py  create_wallet_15.12.2024_13:55.py
tests/: locustfile.py
