[tool.poetry]
name = "wallet-fast-api"
version = "0.1.0"
description = ""
authors = ["Sergey Golobokov <sergeygolobokov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
uvicorn = "^0.33.0"
python = "^3.12"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.7.0"
greenlet = "^3.1.1"
alembic = "^1.14.0"
asyncio = "^3.4.3"
fastapi = "^0.115.6"
locust = "^2.32.4"
asyncpg = "^0.30.0"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
